# aoc-megarepo

./: .gitignore  Dockerfile  README.md  run_all.sh
01/: solution.rs
01-sonar-sweep/: part1.sql  part2.sql  solution.rs  solution.sql
02/: solution.rs
02-dive/: solution.js  solution.rs
03/: solution.rs
03-binary-diagnostics/: solution.js  solution.rs  solution.sql
04/: exp.js  solution.rs
04-bingo/: input2  solution.js
05/: solution.hs  solution.rs
05-hydrothermal-venture/: solution.js
06/: solution.rs
06-lanternfish/: solution.js  solution.sql
07/: dabbing-on-aoc.js  solution.rs
07-the-treachery-of-whales/: solution.sql
08/: solution.rs
08-seven-segment-search/: solution.js  solution.sql
09/: solution.rs
09-smoke-basin/: solution.js
10/: solution.hs  solution.rs
11/: solution.rs
11-obligatory-game-of-life-spinoff/: solution.js  viz.html  viz.js
12/: solution.rs
12-passage-pathing/: solution.js
13/: solution.rs
13-transparent-origami/: solution.hs
14/: solution.rs
14-extended-polymerization/: solution.hs
15/: solution.rs
15-chiton/: solution.js
16/: solution.rs
17/: solution.rs  solution2.rs
18/: solution.rs
18-snailfish/: solution.js
19/: solution.rs
19-beacon-scanner/: gosho  input0  solution.hs
20/: solution.rs
2024/: .gitignore  Cargo.toml
2026/: Cargo.toml  gosho  pesho
2026/src/: lib.rs
21/: solution.ts
21-dirac-dice/: solution.hs
22/: part2-for-real.rs  solution-part-2.rs  solution.rs
22-reactor-reboot/: solution.js
23/: solution.rs
23-amphipod/: game.js
24-alu/: solution.js
(+59 files in other folders)
