[package]
name = "aoc2026"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "01"
path = "src/bin/01/main.rs"

[[bin]]
name = "02"
path = "src/bin/02/main.rs"

[[bin]]
name = "03"
path = "src/bin/03/main.rs"

[[bin]]
name = "04"
path = "src/bin/04/main.rs"

[[bin]]
name = "05"
path = "src/bin/05/main.rs"

[[bin]]
name = "06"
path = "src/bin/06/main.rs"

[dependencies]
